removed folder first ordering added img block to avoid inline-block overflow issues

--- a/src/app/components/gallery-thumbnail-preview/gallery-thumbnail-preview.component.scss
+++ b/src/app/components/gallery-thumbnail-preview/gallery-thumbnail-preview.component.scss
@@ -49,6 +49,7 @@
     }
 
     .image-contain {
+      display: block;
       height: 100%;
       min-width: 50px;
     }
