--- a/src/app/components/gallery-view/gallery-view.component.scss
+++ b/src/app/components/gallery-view/gallery-view.component.scss
@@ -1,5 +1,9 @@
 @import "./../../styles.scss";
 
+:host {
+  display: block;
+}
+
 .fs-gallery-thumbnails.layout-flow,
 .fs-gallery-thumbnails.layout-flow-nowrap {
   display: flex;
